[project]
name = "notebook"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.63",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "openai>=1.54.4",
]

[project.optional-dependencies]
notebook = [
    "jupyterlab>=4.3.0",
]

[tool.uv]
dev-dependencies = [
    "boto3-stubs[bedrock-runtime]>=1.35.63",
    "mypy>=1.13.0",
]


[tool.ruff]
target-version = "py312"
line-length = 120
lint.select = ["ALL"]
lint.ignore = [
    "D",
    "T201"
]
